# fzfcpp

./: .gitignore  CMakeLists.txt  README.md  bd.bat  br.bat
include/: argsParse.h  help.h
src/: argsParse.cpp  help.cpp  main.cpp
